IW-93 Fix: Mobile - Contact us - missing background image

--- a/src/pages/Landing/sections/ContactUs/index.styl
+++ b/src/pages/Landing/sections/ContactUs/index.styl
@@ -65,22 +65,6 @@
         background: white
         box-shadow: 0 0 1px 0 rgba(16,22,53,0.1), 0 4px 8px 0 rgba(28,31,56,0.05)
 
-    .form-btn
-      font-family 'Roboto Mono'
-      font-weight $medium-weight
-
-      +iphone()
-        border 0.5px solid #C2C9D2
-        background-color $white
-        color $blue
-        -webkit-box-shadow 0 1px 3px 0 rgba(0,0,0,0.05)
-        -moz-box-shadow 0 1px 3px 0 rgba(0,0,0,0.05)
-        box-shadow 0 1px 3px 0 rgba(0,0,0,0.05)
-
-      svg
-        +iphone()
-          fill $blue
-
   .form-message
     display flex
     justify-content center
